Cycles Diffuse baking does not preserve transparency (regression) #93711

Closed
opened 2021-12-05 17:23:26 +01:00 by Volodymyr · 9 comments

System Information
Operating system: Windows 10 home x64
Graphics card: GTX 1050 4GB

Broken: 3.0
Worked: 2.93

After baking some texture appear black background with turn on "Clear image" option, when in 2.93 it had transparent background.

Options, which used to bake:

  • Created 4k UV with "Alpha" option;
  • add to material image texture node for put bake UV.
  • Chose diffuse bake type, with turn off indirect and direct options, in output 'image texture' and margin 16px and turn on clear image.
    WTF.png
**System Information** Operating system: Windows 10 home x64 Graphics card: GTX 1050 4GB Broken: 3.0 Worked: 2.93 After baking some texture appear black background with turn on "Clear image" option, when in 2.93 it had transparent background. Options, which used to bake: - Created 4k UV with "Alpha" option; - add to material image texture node for put bake UV. - Chose diffuse bake type, with turn off indirect and direct options, in output 'image texture' and margin 16px and turn on clear image. ![WTF.png](https://archive.blender.org/developer/F12692154/WTF.png)
Author

Added subscriber: @LordMysteriX

Added subscriber: @LordMysteriX
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hm, can confirm.

This should have been fixed in 3.0, see f0be276514, but apparently something went wrong there.

@brecht: mind checking?

Hm, can confirm. This should have been fixed in 3.0, see f0be276514, but apparently something went wrong there. @brecht: mind checking?
Philipp Oeser changed title from Diffuse bake issue! to Cycles Diffuse baking does not preserve transparency (regression) 2021-12-30 12:52:16 +01:00

Added subscriber: @Icedcg

Added subscriber: @Icedcg

Hi there! Guys, can you roughly tell when you can solve this problem? In my current project I have a preset in compositing tab for all baked shadow maps and its requires an alpha for working. I don't know if I should wait for the update or should I roll bac to 2.93?
P.S. Sorry for bad english
P.S.S. Sorry for asking here If I shouldn't have done it here

Hi there! Guys, can you roughly tell when you can solve this problem? In my current project I have a preset in compositing tab for all baked shadow maps and its requires an alpha for working. I don't know if I should wait for the update or should I roll bac to 2.93? P.S. Sorry for bad english P.S.S. Sorry for asking here If I shouldn't have done it here

This issue was referenced by blender/cycles@856f7429a5

This issue was referenced by blender/cycles@856f7429a5def461e74c9af6d6d55c7a2cc940ba

This issue was referenced by 1ac2d2dcb6

This issue was referenced by 1ac2d2dcb6d1a18e86d86b8d03f46f879a43f33c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-01-20 22:33:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93711
No description provided.