Fix T93711: Cycles diffuse/glossy baking does not write alpha

With the change to use render passes internally the alpha channel got lost.
Add support for these render passes to output an alpha channel for baking.